--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,23 @@
 <p>
 
 welcome to chat app vineeth have a nice day
+<script src = "/socket.io/socket.io.js"></script>
 
+<script>
+var socket = io();
+
+socket.on('connect',() => {
+  console.log('connected to server');
+});
+
+socket.on('disconnect',() => {
+  console.log('disconnected from server');
+});
+
+
+
+
+</script>
 </p>
  </body>
 </html>
