--- a/public/index.html
+++ b/public/index.html
@@ -8,24 +8,9 @@
  <body>
 <p>
 
-welcome to chat app vineeth have a nice day
+welcome to chat app vineeth have a nice day</p>
 <script src = "/socket.io/socket.io.js"></script>
 
-<script>
-var socket = io();
-
-socket.on('connect',() => {
-  console.log('connected to server');
-});
-
-socket.on('disconnect',() => {
-  console.log('disconnected from server');
-});
-
-
-
-
-</script>
-</p>
+<script src="/js/index.js"></script>
  </body>
 </html>
