--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,15 @@
 <p>
 
 welcome to chat app vineeth have a nice day</p>
-<script src = "/socket.io/socket.io.js"></script>
+<ol id="messages"></ol>
+<form id="message-form">
+<input type="text" name="message" placeholder="message">
+<button>send</button
 
+</form>
+
+<script src = "/socket.io/socket.io.js"></script>
+<script src="/js/libs/jquery-3.2.1.min.js"></script>
 <script src="/js/index.js"></script>
  </body>
 </html>
