--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ <!doctype html>
 <html lang="en">
  <head>
   <meta charset="UTF-8">
@@ -13,11 +13,11 @@
 <div class="form-field"><h3>Join a chat</h3></div>
 <div class="form-field">
 <label>Display name</label>
-<input type="text" name="name" autofocus/>
+<input type="text" name="name" autofocus required autocomplete="off"/>
 </div>
 <div class="form-field">
   <label>Room name</label>
-  <input type="text" name="room"/></div>
+  <input type="text" name="room" required autocomplete="off"/></div>
 <div class="form-field">
 <button>join</button>
 </div>
